2013-01-30  ------ inet-2.1.0 released ------

2012-10-24  Zoltan Bojthe

	IPv6Address: 
	- Removed Uint128 related functions
	- Added an additional constructMask() method
	- The convert to Uint128 operator has been replaced with 
	  converter function

2012-08-07  ------ inet-2.0.0 released ------

2012-06-25  ------ inet-1.99.5 released ------

2012-06-15  Zoltan Bojthe

	IPv4Address:
	- added a parameter to str() function that allows choosing
	  between "0.0.0.0" and "<unspec>" when the address is unspecified
	  (when its value is 0)
	- made the uint32 constructor explicit

	IPvXAddressResolver: resolving netmask if needed
	- added support for 'x.x.x.x/' syntax
	  (which will return the netmask instead of the ip address)
	- added ADDR_MASK enum (to get the netmask instead of the address)
	- NOTE: netmask resolving is implemented only for IPv4

2012-05-15  Tamas Borbely

	Added DSCP and ECN accessors to IPv4/IPv6ControlInfo.

2012-03-20  ------ inet-1.99.4 released ------

2012-03-04  Zoltan Bojthe

	IPvXAddressResolver::tryResolve() uses a new syntax:
	host
	host(protocol)
	host%interfacename
	host%interfacename(protocol)
	host>destmodule
	host>destmodule(protocol)
	address: host [ { '%' interfacename | '>' destmodule } ] [ '(' protocol ')' ]
	protocol: { 'ipv4' | 'ipv6' | 'routerId' }

2012-02-28  Andras Varga

	'const char*' ctors of IPv4Address/IPv6Address/MACAddress made explicit

2012-02-24  ------ inet-1.99.3 released ------

2012-02-10  Rudolf Hornig

	IPv4Address/IPv6Address: added LL_MANET_ROUTERS (224.0.0.109, FF02::6D),
	used by MANET code [taken from INETMANET]

2012-02-09  Andras Varga

	IPv4/IPv6: added QoS support
	- IPv4: replaced DSCP with TypeOfService
	- IPv6: added Traffic Class to packet and controlInfo

2011-12-15  Tamas Borbely

	IPv6Address: added isSolicitedNodeMulticastAddress() method

2012-02-05  Andras Varga

	IPv6Address: fixed UInt128 conversions (assumed wrong word order);
	comments revised
