@@ -188,6 +188,11 @@ class INET_API IPvXAddressResolver
      * Like notificationBoardOf(), but doesn't throw error if not found.
      */
     virtual NotificationBoard *findNotificationBoardOf(cModule *host);
+
+    /**
+     * Find the Host with the specified address.
+     */
+    virtual cModule *findHostWithAddress(const IPvXAddress &addr);
     //@}
 };
 
